logs/pyreconstruct.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyRECONSTRUCT-2.2.0.egg-info'...
Listing './lib/python3.5/site-packages/classes'...
Compiling './lib/python3.5/site-packages/classes/Contour.py'...
***   File "./lib/python3.5/site-packages/classes/Contour.py", line 26
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/classes/Image.py'...
***   File "./lib/python3.5/site-packages/classes/Image.py", line 19
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/classes/Section.py'...
***   File "./lib/python3.5/site-packages/classes/Section.py", line 20
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/classes/Series.py'...
***   File "./lib/python3.5/site-packages/classes/Series.py", line 104
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/classes/Transform.py'...
***   File "./lib/python3.5/site-packages/classes/Transform.py", line 16
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gui'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tools'...
Compiling './lib/python3.5/site-packages/tools/handleXML.py'...
***   File "./lib/python3.5/site-packages/tools/handleXML.py", line 212
    print '\n\thandleXML.intorfloat():',input,'converted to float',float(input),'\n'
                                      ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
